fix z-indexes for real this time

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,10 +65,14 @@ body,
   margin: 0;
 }
 
-react-flow__node-machine {
-  @apply z-10;
+.react-flow__node {
+  z-index: -1 !important;
 }
 
-react-flow__node-slot-group {
-  @apply z-20;
+.react-flow__node.react-flow__node-machine {
+  z-index: -30 !important;
+}
+
+.react-flow__node.react-flow__node-slot-group {
+  z-index: -20 !important;
 }
